--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,13 @@ version: "3.9"
 
 services:
   jenkins:
-    image: jenkins/jenkins:lts-jdk17
+    image: jenkins/jenkins:lts
     container_name: jenkins
     restart: unless-stopped
 
     ports:
       - "8080:8080"
+      - "50000:50000"  
 
     volumes:
       - ./jenkins_home:/var/jenkins_home
